--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,8 @@ python-dotenv==1.1.1
 python-json-logger==2.0.7
 pytz==2024.1
 pywin32==306; sys_platform == "win32"
-pywinpty==2.0.13
+pywinpty==2.0.13; sys_platform == "win32"
+
 PyYAML==6.0.1
 pyzmq==26.0.3
 qtconsole==5.5.2
