--- a/requirements.txt
+++ b/requirements.txt
@@ -124,3 +124,6 @@ webencodings==0.5.1
 websocket-client==1.8.0
 whitenoise==6.11.0
 widgetsnbextension==4.0.11
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
+
